<?xml version="1.0"?>

<!--
Copyright (c) 2023, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_nitros_imu_type</name>
  <version>3.2.5</version>
  <description>Isaac ROS NITROS IMU Type</description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Ashwin Varghese Kuruttukulam</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>gxf_isaac_messages</depend>
  <depend>gxf_isaac_gxf_helpers</depend>

  <build_depend>isaac_ros_common</build_depend>
  <build_depend>gxf_isaac_gems</build_depend>

  <exec_depend>gxf_isaac_atlas</exec_depend>
  <exec_depend>gxf_isaac_sight</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
